# LongNumber

./: CMakeLists.txt  LongNumber.cpp  LongNumber.hpp  Makefile  Pi_Calc.cpp  Readme.md  Tests.cpp  TimeGuard.hpp  donttouch.cpp  main.cpp
LongNumber/: CMakeLists.txt  LongNumber.cpp  LongNumber.hpp
lib/: TimeGuard.hpp
src/: LongNumber.cpp
tests/: Tests.cpp
